--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev.Lmm</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dev-Lmm</title>
+    <!-- Icon -->
+    <link rel="icon" href="assets/img/logo/logo.png" />
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/css/style_sheet.css" />
+    <!-- JS -->
+    <script src="assets/js/scripts.js"></script>
+    <!-- CDN -->
+    <script defer src="https://kit.fontawesome.com/757436a7d6.js" crossorigin="anonymous"></script>
+
+  </head>
+  <body>
+    <!-- Desktop View -->
+    <section class="Desktop_img">
+      <!-- Taskbar -->
+      <div class="taskbar">
+
+        <!-- Menu Botton  -->
+        <div class="menu_button">
+          <a href=""><img src="assets/img/icons-system/menu_icon.png" alt="Menu" class="menu_icon"/></a>
+        </div>
+
+        <!-- Taskbar Icon -->
+        <div class="taskbar_icon">
+            <a href="" target="_blank" rel="Safari"><img src="assets/img/icons-apps/Safari.png" alt="Menu" class="menu_icon"/></a>
+            <a href="https://github.com/Dev-Lmm" target="_blank" rel="GitHub"><img src="assets/img/icons-apps/GitHub(DarkMode).png" alt="Menu" class="icon"/></a>
+            <a href="https://walink.co/72b437" target="_blank" rel="Whatsapp"><img src="assets/img/icons-apps/Whatsapp.png" alt="Menu" class="icon"/></a>
+            <a href="https://t.me/Dev_Lmm" target="_blank" rel="Telegram"><img src="assets/img/icons-apps/Telegram.png" alt="Menu" class="icon"/></a>
+            <a href="https://lennart-montoya-morales.itch.io/" target="_blank" rel="Itch.io"><img src="assets/img/icons-apps/Itch.io.png" alt="Menu" class="icon"/></a>
+        </div>
+
+        <!-- Notify Icon -->
+        <div class="notification_area">
+          <a href=""><i class="fa-solid fa-wifi"></i></a>
+          <a href="" class="volume_icons"><i class="fa-solid fa-volume-high"></i></i></a>
+          <a href="" class="notify_icons"><i class="fa-solid fa-bell"></i></a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Clock -->
+    <section class="clock_area">
+      <!-- Notify Icon -->
+      <a href=""><div id="reloj" class="reloj"> 00 : 00 : 00</div></a>
+    </section>
+
+  </body>
 </html>
