--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
         <!-- Menu Botton  -->
         <div class="menu_button">
-          <a href=""><img src="assets/img/icons-system/menu_icon.png" alt="Menu" class="menu_icon"/></a>
+          <a href=""><img src="assets/img/icons-system/Menu.png" alt="Menu" class="menu_icon"/></a>
         </div>
 
         <!-- Taskbar Icon -->
         <div class="taskbar_icon">
-            <a href="" target="_blank" rel="Safari"><img src="assets/img/icons-apps/Safari.png" alt="Menu" class="menu_icon"/></a>
+            <a href="" rel="Safari"><img src="assets/img/icons-system/Files.png" alt="Menu" class="menu_icon"/></a>
             <a href="https://github.com/Dev-Lmm" target="_blank" rel="GitHub"><img src="assets/img/icons-apps/GitHub(DarkMode).png" alt="Menu" class="icon"/></a>
             <a href="https://walink.co/72b437" target="_blank" rel="Whatsapp"><img src="assets/img/icons-apps/Whatsapp.png" alt="Menu" class="icon"/></a>
             <a href="https://t.me/Dev_Lmm" target="_blank" rel="Telegram"><img src="assets/img/icons-apps/Telegram.png" alt="Menu" class="icon"/></a>
