--- a/index.html
+++ b/index.html
@@ -17,37 +17,25 @@
   </head>
   <body>
     <!-- Desktop View -->
-    <section class="Desktop_img">
-      <!-- Taskbar -->
-      <div class="taskbar">
-
-        <!-- Menu Botton  -->
-        <div class="menu_button">
-          <a href=""><img src="assets/img/icons-system/Menu.png" alt="Menu" class="menu_icon"/></a>
+    <section class="Desktop">
+      <!-- Taskbars -->
+      <div class="Taskbar">
+        <div class="Icons_column">
+          <a href="" ><img src="assets/img/icons-system/Menu.png" alt="Menu" class="Menu_icon"/></a>
+          <a href="" rel="Files"><img src="assets/img/icons-system/Files.png" alt="Menu" class="File_icon"/></a>
+          <a href="https://github.com/Dev-Lmm" target="_blank" rel="GitHub"><img src="assets/img/icons-apps/GitHub(DarkMode).png" alt="Menu" class="App_icon"/></a>
+          <a href="https://walink.co/72b437" target="_blank" rel="Whatsapp"><img src="assets/img/icons-apps/Whatsapp.png" alt="Menu" class="App_icon"/></a>
+          <a href="https://t.me/Dev_Lmm" target="_blank" rel="Telegram"><img src="assets/img/icons-apps/Telegram.png" alt="Menu" class="App_icon"/></a>
+          <a href="https://lennart-montoya-morales.itch.io/" target="_blank" rel="Itch.io"><img src="assets/img/icons-apps/Itch.io.png" alt="Menu" class="App_icon"/></a>
         </div>
-
-        <!-- Taskbar Icon -->
-        <div class="taskbar_icon">
-            <a href="" rel="Safari"><img src="assets/img/icons-system/Files.png" alt="Menu" class="menu_icon"/></a>
-            <a href="https://github.com/Dev-Lmm" target="_blank" rel="GitHub"><img src="assets/img/icons-apps/GitHub(DarkMode).png" alt="Menu" class="icon"/></a>
-            <a href="https://walink.co/72b437" target="_blank" rel="Whatsapp"><img src="assets/img/icons-apps/Whatsapp.png" alt="Menu" class="icon"/></a>
-            <a href="https://t.me/Dev_Lmm" target="_blank" rel="Telegram"><img src="assets/img/icons-apps/Telegram.png" alt="Menu" class="icon"/></a>
-            <a href="https://lennart-montoya-morales.itch.io/" target="_blank" rel="Itch.io"><img src="assets/img/icons-apps/Itch.io.png" alt="Menu" class="icon"/></a>
-        </div>
-
-        <!-- Notify Icon -->
-        <div class="notification_area">
+        <!-- Notification area -->
+        <div class="System_column">
           <a href=""><i class="fa-solid fa-wifi"></i></a>
           <a href="" class="volume_icons"><i class="fa-solid fa-volume-high"></i></i></a>
+          <a href=""><div id="reloj" class="reloj"> 00 : 00 : 00</div></a>
           <a href="" class="notify_icons"><i class="fa-solid fa-bell"></i></a>
         </div>
       </div>
-    </section>
-
-    <!-- Clock -->
-    <section class="clock_area">
-      <!-- Notify Icon -->
-      <a href=""><div id="reloj" class="reloj"> 00 : 00 : 00</div></a>
     </section>
 
   </body>
